--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <nav>
-        <div class="nav__logo"><a href="#">Pako Global Projects</a></div>
+        <div class="nav__logo"><a href="#">PGP</a></div>
         <ul class="nav__links" id="nav-links">
           <li class="link"><a href="#home">Home</a></li>
           <li class="link"><a href="#about">About</a></li>
@@ -28,6 +28,8 @@
         </div>
       </nav>
       <div class="section__container header__container" id="home">
+        <h1>Pako Global Projects</h1>
+      </br>
         <h1>Taking pride in quality service under one roof.</h1>
         
       </div>
@@ -149,7 +151,7 @@
         <div class="footer__col">
           <h4>Help</h4>
           <div class="footer__links">
-            <a href="simbamachida@gmail.com">pakoglobalprojectsa@gmail.com</a>
+            <a href="pakoglobalprojects@gmail.com">pakoglobalprojects@gmail.com</a>
             <a href="#">+27 72 122 1550</a>
           </div>
         </div>
