--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       <div class="section__container header__container" id="home">
         <h1>Pako Global Projects</h1>
       </br>
-        <h1>Taking pride in quality service under one roof.</h1>
+        <title>Taking pride in quality service under one roof.</title>
+       
         
       </div>
     </header>
