--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <h1>Pako Global Projects</h1>
       </br>
         <title>Taking pride in quality service under one roof.</title>
+         <p>Pako Global Projects</p>
        
         
       </div>
