--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@
       </nav>
       <div class="section__container header__container" id="home">
         <h1>Pako Global Projects</h1>
-      </br>
-        <title>Taking pride in quality service under one roof.</title>
-         <p>Pako Global Projects</p>
-       
-        
+        <h2>Taking pride in quality service under one roof.</h2>
       </div>
     </header>
 
