--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </nav>
       <div class="section__container header__container" id="home">
         <h1>Pako Global Projects</h1>
-        <h2>Taking pride in quality service under one roof.</h2>
+        <h2>At PGP, we are committed to delivering excellence, backed by a dedicated team of experts who bring experience, professionalism, and a customer-centric approach to every project</h2>
       </div>
     </header>
 
