--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       </nav>
       <div class="section__container header__container" id="home">
         <h1>Pako Global Projects</h1>
-        <h2>At our Company, we are committed to delivering excellence, backed by a dedicated team of experts who bring experience, 
-          professionalism, and a customer-centric approach to every project</h2>
+        <h2 style="text-align: center;">At our Company, we are committed to delivering excellence, 
+          backed by a dedicated team of experts who bring experience, professionalism, and a customer-centric approach to every project</h2>
       </div>
     </header>
 
