--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul class="nav__links" id="nav-links">
           <li class="link"><a href="#home">Home</a></li>
           <li class="link"><a href="#about">About</a></li>
-          <li class="link"><a href="#subscribe">Message</a></li>
+          <li class="link"><a href="#subscribe">Contact Us</a></li>
         </ul>
         <div class="nav__menu__btn" id="menu-btn">
           <span><i class="ri-menu-line"></i></span>
