--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </h2>
     
         <!-- Contact Form -->
-        <form action="https://formspree.io/f/xrbzneyr" method="POST" class="contact-form">
+        <form action="https://formspree.io/f/manwrqlr" method="POST" class="contact-form">
           <div class="form-group">
             <label for="name">Name</label>
             <input type="text" id="name" name="name" placeholder="Your Name" required />
