--- a/index.html
+++ b/index.html
@@ -121,8 +121,16 @@
           
           <div class="form-group">
             <label for="email">Email Address</label>
-            <input type="email" id="email" name="_replyto" placeholder="Your Email" required />
+            <input type="email" id="email" name="Contact Email" placeholder="Your Email" required />
           </div>
+
+          <div class="form-group">
+            <label for="phone">Phone Number</label>
+            <input type="tel" id="phone" name="phone" placeholder="+1 234 567 8901" 
+             pattern="^\+[1-9]{1}[0-9]{3,14}$" required />
+            <small>Format: +[country code] [phone number]</small>
+          </div>
+
           
           <div class="form-group">
             <label for="service">Service Required</label>
